Proyecto2/api/.antlr/lexicalAnalyzerParser.java
// Generated from /home/snier/Documents/LabCompi2/Projects/TestProject2/Project2/api/lexicalAnalyzer.g4 by ANTLR 4.13.1
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class lexicalAnalyzerParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, T__22=23, T__23=24, 
		T__24=25, T__25=26, T__26=27, T__27=28, T__28=29, T__29=30, T__30=31, 
		T__31=32, T__32=33, T__33=34, T__34=35, T__35=36, T__36=37, T__37=38, 
		T__38=39, T__39=40, T__40=41, T__41=42, T__42=43, T__43=44, T__44=45, 
		T__45=46, T__46=47, T__47=48, T__48=49, LINE_COMMENT=50, MULTILINE_COMMENT=51, 
		NEWLINE=52, NULL=53, BOOL=54, ID=55, INT=56, DECIMAL=57, CHARACTER=58, 
		STRING=59;
	public static final int
		RULE_init = 0, RULE_lstinstructions = 1, RULE_instruction = 2, RULE_funcInstructions = 3, 
		RULE_funcParams = 4, RULE_func = 5, RULE_pars = 6, RULE_stmtSlice = 7, 
		RULE_stmtVariables = 8, RULE_stmtAssign = 9, RULE_print = 10, RULE_instructionIf = 11, 
		RULE_forInstruction = 12, RULE_forDeclare = 13, RULE_switchInstruction = 14, 
		RULE_cases = 15, RULE_breakInstruction = 16, RULE_continueInstruction = 17, 
		RULE_returnFunc = 18, RULE_expression = 19, RULE_type = 20, RULE_expr = 21;
	private static String[] makeRuleNames() {
		return new String[] {
			"init", "lstinstructions", "instruction", "funcInstructions", "funcParams", 
			"func", "pars", "stmtSlice", "stmtVariables", "stmtAssign", "print", 
			"instructionIf", "forInstruction", "forDeclare", "switchInstruction", 
			"cases", "breakInstruction", "continueInstruction", "returnFunc", "expression", 
			"type", "expr"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "';'", "'func'", "'('", "')'", "':'", "'{'", "'}'", "','", "'var'", 
			"'[]'", "'='", "':='", "'fmt.Println'", "'if'", "'else if'", "'else'", 
			"'for'", "'switch'", "'default'", "'case'", "'break'", "'continue'", 
			"'return'", "'int'", "'float64'", "'string'", "'bool'", "'rune'", "'-'", 
			"'*'", "'/'", "'+'", "'%'", "'!'", "'strconv.Atoi'", "'strconv.ParseFloat'", 
			"'reflect.TypeOf'", "'=='", "'!='", "'>='", "'>'", "'<='", "'<'", "'&&'", 
			"'||'", "'++'", "'--'", "'+='", "'-='", null, null, null, "'nil'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, "LINE_COMMENT", "MULTILINE_COMMENT", "NEWLINE", "NULL", "BOOL", 
			"ID", "INT", "DECIMAL", "CHARACTER", "STRING"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "lexicalAnalyzer.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public lexicalAnalyzerParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class InitContext extends ParserRuleContext {
		public LstinstructionsContext lstinstructions() {
			return getRuleContext(LstinstructionsContext.class,0);
		}
		public InitContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_init; }
	}

	public final InitContext init() throws RecognitionException {
		InitContext _localctx = new InitContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_init);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(44);
			lstinstructions();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class LstinstructionsContext extends ParserRuleContext {
		public List<InstructionContext> instruction() {
			return getRuleContexts(InstructionContext.class);
		}
		public InstructionContext instruction(int i) {
			return getRuleContext(InstructionContext.class,i);
		}
		public LstinstructionsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_lstinstructions; }
	}

	public final LstinstructionsContext lstinstructions() throws RecognitionException {
		LstinstructionsContext _localctx = new LstinstructionsContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_lstinstructions);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(46);
			instruction();
			setState(50);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 1143914563602113036L) != 0)) {
				{
				{
				setState(47);
				instruction();
				}
				}
				setState(52);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class InstructionContext extends ParserRuleContext {
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public StmtVariablesContext stmtVariables() {
			return getRuleContext(StmtVariablesContext.class,0);
		}
		public StmtAssignContext stmtAssign() {
			return getRuleContext(StmtAssignContext.class,0);
		}
		public FuncInstructionsContext funcInstructions() {
			return getRuleContext(FuncInstructionsContext.class,0);
		}
		public PrintContext print() {
			return getRuleContext(PrintContext.class,0);
		}
		public InstructionIfContext instructionIf() {
			return getRuleContext(InstructionIfContext.class,0);
		}
		public StmtSliceContext stmtSlice() {
			return getRuleContext(StmtSliceContext.class,0);
		}
		public ForInstructionContext forInstruction() {
			return getRuleContext(ForInstructionContext.class,0);
		}
		public SwitchInstructionContext switchInstruction() {
			return getRuleContext(SwitchInstructionContext.class,0);
		}
		public BreakInstructionContext breakInstruction() {
			return getRuleContext(BreakInstructionContext.class,0);
		}
		public ContinueInstructionContext continueInstruction() {
			return getRuleContext(ContinueInstructionContext.class,0);
		}
		public ReturnFuncContext returnFunc() {
			return getRuleContext(ReturnFuncContext.class,0);
		}
		public InstructionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_instruction; }
	}

	public final InstructionContext instruction() throws RecognitionException {
		InstructionContext _localctx = new InstructionContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_instruction);
		int _la;
		try {
			setState(101);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,13,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(53);
				expression();
				setState(55);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==T__0) {
					{
					setState(54);
					match(T__0);
					}
				}

				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(57);
				stmtVariables();
				setState(59);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==T__0) {
					{
					setState(58);
					match(T__0);
					}
				}

				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(61);
				stmtAssign();
				setState(63);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==T__0) {
					{
					setState(62);
					match(T__0);
					}
				}

				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(65);
				funcInstructions();
				setState(67);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==T__0) {
					{
					setState(66);
					match(T__0);
					}
				}

				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(69);
				print();
				setState(71);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==T__0) {
					{
					setState(70);
					match(T__0);
					}
				}

				}
				break;
			case 6:
				enterOuterAlt(_localctx, 6);
				{
				setState(73);
				instructionIf();
				setState(75);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==T__0) {
					{
					setState(74);
					match(T__0);
					}
				}

				}
				break;
			case 7:
				enterOuterAlt(_localctx, 7);
				{
				setState(77);
				stmtSlice();
				setState(79);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==T__0) {
					{
					setState(78);
					match(T__0);
					}
				}

				}
				break;
			case 8:
				enterOuterAlt(_localctx, 8);
				{
				setState(81);
				forInstruction();
				setState(83);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==T__0) {
					{
					setState(82);
					match(T__0);
					}
				}

				}
				break;
			case 9:
				enterOuterAlt(_localctx, 9);
				{
				setState(85);
				switchInstruction();
				setState(87);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==T__0) {
					{
					setState(86);
					match(T__0);
					}
				}

				}
				break;
			case 10:
				enterOuterAlt(_localctx, 10);
				{
				setState(89);
				breakInstruction();
				setState(91);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==T__0) {
					{
					setState(90);
					match(T__0);
					}
				}

				}
				break;
			case 11:
				enterOuterAlt(_localctx, 11);
				{
				setState(93);
				continueInstruction();
				setState(95);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==T__0) {
					{
					setState(94);
					match(T__0);
					}
				}

				}
				break;
			case 12:
				enterOuterAlt(_localctx, 12);
				{
				setState(97);
				returnFunc();
				setState(99);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==T__0) {
					{
					setState(98);
					match(T__0);
					}
				}

				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class FuncInstructionsContext extends ParserRuleContext {
		public FuncInstructionsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_funcInstructions; }
	 
		public FuncInstructionsContext() { }
		public void copyFrom(FuncInstructionsContext ctx) {
			super.copyFrom(ctx);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class FuncStmtContext extends FuncInstructionsContext {
		public TypeContext returnT;
		public TerminalNode ID() { return getToken(lexicalAnalyzerParser.ID, 0); }
		public LstinstructionsContext lstinstructions() {
			return getRuleContext(LstinstructionsContext.class,0);
		}
		public FuncParamsContext funcParams() {
			return getRuleContext(FuncParamsContext.class,0);
		}
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public FuncStmtContext(FuncInstructionsContext ctx) { copyFrom(ctx); }
	}

	public final FuncInstructionsContext funcInstructions() throws RecognitionException {
		FuncInstructionsContext _localctx = new FuncInstructionsContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_funcInstructions);
		int _la;
		try {
			_localctx = new FuncStmtContext(_localctx);
			enterOuterAlt(_localctx, 1);
			{
			setState(103);
			match(T__1);
			setState(104);
			match(ID);
			setState(105);
			match(T__2);
			setState(107);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==ID) {
				{
				setState(106);
				funcParams();
				}
			}

			setState(109);
			match(T__3);
			setState(110);
			match(T__4);
			setState(112);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & 520093696L) != 0)) {
				{
				setState(111);
				((FuncStmtContext)_localctx).returnT = type();
				}
			}

			setState(114);
			match(T__5);
			setState(115);
			lstinstructions();
			setState(116);
			match(T__6);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class FuncParamsContext extends ParserRuleContext {
		public List<TerminalNode> ID() { return getTokens(lexicalAnalyzerParser.ID); }
		public TerminalNode ID(int i) {
			return getToken(lexicalAnalyzerParser.ID, i);
		}
		public List<TypeContext> type() {
			return getRuleContexts(TypeContext.class);
		}
		public TypeContext type(int i) {
			return getRuleContext(TypeContext.class,i);
		}
		public FuncParamsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_funcParams; }
	}

	public final FuncParamsContext funcParams() throws RecognitionException {
		FuncParamsContext _localctx = new FuncParamsContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_funcParams);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(118);
			match(ID);
			setState(119);
			type();
			setState(125);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__7) {
				{
				{
				setState(120);
				match(T__7);
				setState(121);
				match(ID);
				setState(122);
				type();
				}
				}
				setState(127);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class FuncContext extends ParserRuleContext {
		public ParsContext pars() {
			return getRuleContext(ParsContext.class,0);
		}
		public FuncContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_func; }
	}

	public final FuncContext func() throws RecognitionException {
		FuncContext _localctx = new FuncContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_func);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(128);
			match(T__2);
			setState(130);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & 1143914563587014664L) != 0)) {
				{
				setState(129);
				pars();
				}
			}

			setState(132);
			match(T__3);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ParsContext extends ParserRuleContext {
		public List<ExprContext> expr() {
			return getRuleContexts(ExprContext.class);
		}
		public ExprContext expr(int i) {
			return getRuleContext(ExprContext.class,i);
		}
		public ParsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_pars; }
	}

	public final ParsContext pars() throws RecognitionException {
		ParsContext _localctx = new ParsContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_pars);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(134);
			expr(0);
			setState(139);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__7) {
				{
				{
				setState(135);
				match(T__7);
				setState(136);
				expr(0);
				}
				}
				setState(141);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class StmtSliceContext extends ParserRuleContext {
		public StmtSliceContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_stmtSlice; }
	 
		public StmtSliceContext() { }
		public void copyFrom(StmtSliceContext ctx) {
			super.copyFrom(ctx);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class StmtSlicesContext extends StmtSliceContext {
		public TerminalNode ID() { return getToken(lexicalAnalyzerParser.ID, 0); }
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public List<ExprContext> expr() {
			return getRuleContexts(ExprContext.class);
		}
		public ExprContext expr(int i) {
			return getRuleContext(ExprContext.class,i);
		}
		public StmtSlicesContext(StmtSliceContext ctx) { copyFrom(ctx); }
	}

	public final StmtSliceContext stmtSlice() throws RecognitionException {
		StmtSliceContext _localctx = new StmtSliceContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_stmtSlice);
		int _la;
		try {
			_localctx = new StmtSlicesContext(_localctx);
			enterOuterAlt(_localctx, 1);
			{
			setState(142);
			match(T__8);
			setState(143);
			match(ID);
			setState(144);
			match(T__9);
			setState(145);
			type();
			setState(156);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__10) {
				{
				setState(146);
				match(T__10);
				setState(147);
				match(T__5);
				setState(152);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 1143914563587014920L) != 0)) {
					{
					setState(150);
					_errHandler.sync(this);
					switch (_input.LA(1)) {
					case T__2:
					case T__28:
					case T__33:
					case T__34:
					case T__35:
					case T__36:
					case NULL:
					case BOOL:
					case ID:
					case INT:
					case DECIMAL:
					case CHARACTER:
					case STRING:
						{
						setState(148);
						expr(0);
						}
						break;
					case T__7:
						{
						setState(149);
						match(T__7);
						}
						break;
					default:
						throw new NoViableAltException(this);
					}
					}
					setState(154);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(155);
				match(T__6);
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class StmtVariablesContext extends ParserRuleContext {
		public StmtVariablesContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_stmtVariables; }
	 
		public StmtVariablesContext() { }
		public void copyFrom(StmtVariablesContext ctx) {
			super.copyFrom(ctx);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class StmtVarContext extends StmtVariablesContext {
		public TerminalNode ID() { return getToken(lexicalAnalyzerParser.ID, 0); }
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public StmtVarContext(StmtVariablesContext ctx) { copyFrom(ctx); }
	}

	public final StmtVariablesContext stmtVariables() throws RecognitionException {
		StmtVariablesContext _localctx = new StmtVariablesContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_stmtVariables);
		int _la;
		try {
			_localctx = new StmtVarContext(_localctx);
			enterOuterAlt(_localctx, 1);
			{
			setState(158);
			match(T__8);
			setState(159);
			match(ID);
			setState(160);
			type();
			setState(163);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__10) {
				{
				setState(161);
				match(T__10);
				setState(162);
				expr(0);
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class StmtAssignContext extends ParserRuleContext {
		public StmtAssignContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_stmtAssign; }
	 
		public StmtAssignContext() { }
		public void copyFrom(StmtAssignContext ctx) {
			super.copyFrom(ctx);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class StmtVarAssignContext extends StmtAssignContext {
		public TerminalNode ID() { return getToken(lexicalAnalyzerParser.ID, 0); }
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public StmtVarAssignContext(StmtAssignContext ctx) { copyFrom(ctx); }
	}

	public final StmtAssignContext stmtAssign() throws RecognitionException {
		StmtAssignContext _localctx = new StmtAssignContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_stmtAssign);
		try {
			_localctx = new StmtVarAssignContext(_localctx);
			enterOuterAlt(_localctx, 1);
			{
			setState(165);
			match(ID);
			setState(166);
			match(T__11);
			setState(167);
			expr(0);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class PrintContext extends ParserRuleContext {
		public PrintContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_print; }
	 
		public PrintContext() { }
		public void copyFrom(PrintContext ctx) {
			super.copyFrom(ctx);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class PrintVarContext extends PrintContext {
		public List<ExprContext> expr() {
			return getRuleContexts(ExprContext.class);
		}
		public ExprContext expr(int i) {
			return getRuleContext(ExprContext.class,i);
		}
		public PrintVarContext(PrintContext ctx) { copyFrom(ctx); }
	}

	public final PrintContext print() throws RecognitionException {
		PrintContext _localctx = new PrintContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_print);
		int _la;
		try {
			_localctx = new PrintVarContext(_localctx);
			enterOuterAlt(_localctx, 1);
			{
			setState(169);
			match(T__12);
			setState(170);
			match(T__2);
			setState(173); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				setState(173);
				_errHandler.sync(this);
				switch (_input.LA(1)) {
				case T__2:
				case T__28:
				case T__33:
				case T__34:
				case T__35:
				case T__36:
				case NULL:
				case BOOL:
				case ID:
				case INT:
				case DECIMAL:
				case CHARACTER:
				case STRING:
					{
					setState(171);
					expr(0);
					}
					break;
				case T__7:
					{
					setState(172);
					match(T__7);
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				setState(175); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & 1143914563587014920L) != 0) );
			setState(177);
			match(T__3);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class InstructionIfContext extends ParserRuleContext {
		public InstructionIfContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_instructionIf; }
	 
		public InstructionIfContext() { }
		public void copyFrom(InstructionIfContext ctx) {
			super.copyFrom(ctx);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class IfStmtContext extends InstructionIfContext {
		public ExprContext exprIf;
		public LstinstructionsContext lsIf;
		public ExprContext exprElseIf;
		public LstinstructionsContext lsElseIf;
		public LstinstructionsContext lsElse;
		public List<ExprContext> expr() {
			return getRuleContexts(ExprContext.class);
		}
		public ExprContext expr(int i) {
			return getRuleContext(ExprContext.class,i);
		}
		public List<LstinstructionsContext> lstinstructions() {
			return getRuleContexts(LstinstructionsContext.class);
		}
		public LstinstructionsContext lstinstructions(int i) {
			return getRuleContext(LstinstructionsContext.class,i);
		}
		public IfStmtContext(InstructionIfContext ctx) { copyFrom(ctx); }
	}

	public final InstructionIfContext instructionIf() throws RecognitionException {
		InstructionIfContext _localctx = new InstructionIfContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_instructionIf);
		int _la;
		try {
			_localctx = new IfStmtContext(_localctx);
			enterOuterAlt(_localctx, 1);
			{
			setState(179);
			match(T__13);
			setState(180);
			((IfStmtContext)_localctx).exprIf = expr(0);
			setState(181);
			match(T__5);
			setState(182);
			((IfStmtContext)_localctx).lsIf = lstinstructions();
			setState(183);
			match(T__6);
			setState(192);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__14) {
				{
				{
				{
				setState(184);
				match(T__14);
				setState(185);
				((IfStmtContext)_localctx).exprElseIf = expr(0);
				setState(186);
				match(T__5);
				setState(187);
				((IfStmtContext)_localctx).lsElseIf = lstinstructions();
				setState(188);
				match(T__6);
				}
				}
				}
				setState(194);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(200);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__15) {
				{
				setState(195);
				match(T__15);
				setState(196);
				match(T__5);
				setState(197);
				((IfStmtContext)_localctx).lsElse = lstinstructions();
				setState(198);
				match(T__6);
				}
			}
